--- a/notebook/etl_pipeline.ipynb
+++ b/notebook/etl_pipeline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "301c4e77",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0eb21729",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d9af2638",
    "metadata": {},
    "outputs": [],
@@ -82,39 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5f62a270",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+---------+----------+----------+------+----------+--------+--------+\n",
-      "|OrderID|ProductID|SaleAmount| OrderDate|Region|CustomerID|Discount|Currency|\n",
-      "+-------+---------+----------+----------+------+----------+--------+--------+\n",
-      "|   1001|      P50|    299.99|01/05/2023|  East|      C100|     0.1|     USD|\n",
-      "|   1002|      P72|      NULL|01/05/2023|  West|      C101|    NULL|     EUR|\n",
-      "|   1003|      P50|     -10.0|01-06-2023|  East|      C100|    0.05|     GBP|\n",
-      "|   1001|      P50|    299.99|01/05/2023|  East|      C100|     0.1|     USD|\n",
-      "|   1004|      P99|     150.0|      NULL| South|      C102|     0.2|     USD|\n",
-      "+-------+---------+----------+----------+------+----------+--------+--------+\n",
-      "only showing top 5 rows\n",
-      "\n",
-      "+---------+-------------------+---------------+\n",
-      "|ProductID|        ProductName|       Category|\n",
-      "+---------+-------------------+---------------+\n",
-      "|      P50|     Wireless Mouse|    Electronics|\n",
-      "|      P72|    Laptop Backpack|    Accessories|\n",
-      "|      P99|            USB Hub|    Electronics|\n",
-      "|      P12|Notebook Stationery|Office Supplies|\n",
-      "|      P88|      Monitor Stand|Office Supplies|\n",
-      "+---------+-------------------+---------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "sales_df = spark.read.option(\"header\", True).csv(\"data/sales_data_2.csv\")\n",
@@ -134,40 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "551881d2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+---------+----------+----------+------+----------+--------+--------+\n",
-      "|OrderID|ProductID|SaleAmount| OrderDate|Region|CustomerID|Discount|Currency|\n",
-      "+-------+---------+----------+----------+------+----------+--------+--------+\n",
-      "|   1002|      P72|      NULL|01/05/2023|  West|      C101|    NULL|     EUR|\n",
-      "+-------+---------+----------+----------+------+----------+--------+--------+\n",
-      "\n",
-      "+-------+---------+----------+---------+------+----------+--------+--------+\n",
-      "|OrderID|ProductID|SaleAmount|OrderDate|Region|CustomerID|Discount|Currency|\n",
-      "+-------+---------+----------+---------+------+----------+--------+--------+\n",
-      "|   1004|      P99|     150.0|     NULL| South|      C102|     0.2|     USD|\n",
-      "+-------+---------+----------+---------+------+----------+--------+--------+\n",
-      "\n",
-      "+-------+---------+----------+----------+------+----------+--------+--------+\n",
-      "|OrderID|ProductID|SaleAmount| OrderDate|Region|CustomerID|Discount|Currency|\n",
-      "+-------+---------+----------+----------+------+----------+--------+--------+\n",
-      "|   1001|      P50|    299.99|01/05/2023|  East|      C100|     0.1|     USD|\n",
-      "|   1003|      P50|     -10.0|01-06-2023|  East|      C100|    0.05|     GBP|\n",
-      "|   1001|      P50|    299.99|01/05/2023|  East|      C100|     0.1|     USD|\n",
-      "|   1005|      PX1|      89.5|01/07/2023| North|      NULL|     0.0|     USD|\n",
-      "|   1006|      P72|     200.0|2023-13-01|  West|      C101|    0.15|     EUR|\n",
-      "+-------+---------+----------+----------+------+----------+--------+--------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sales_df.filter(col(\"SaleAmount\").isNull()).show()  # Check rows where SaleAmount is null\n",
     "\n",
@@ -186,28 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7aeb090f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+---------+----------+----------+------+----------+--------+--------+---------------+\n",
-      "|OrderID|ProductID|SaleAmount| OrderDate|Region|CustomerID|Discount|Currency|OrderDateParsed|\n",
-      "+-------+---------+----------+----------+------+----------+--------+--------+---------------+\n",
-      "|   1001|      P50|    299.99|01/05/2023|  East|      C100|     0.1|     USD|     2023-01-05|\n",
-      "|   1005|      PX1|      89.5|01/07/2023| North|      NULL|     0.0|     USD|     2023-01-07|\n",
-      "|   1007|      P12|     120.0|01/05/2023|  East|      C105|     0.1|     GBP|     2023-01-05|\n",
-      "|   1008|      P88|     300.0|02/05/2023| North|      C106|     0.0|     USD|     2023-02-05|\n",
-      "|   1009|      P77|       0.0|03/05/2023| South|      C107|    NULL|     USD|     2023-03-05|\n",
-      "+-------+---------+----------+----------+------+----------+--------+--------+---------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sales_df_clean = (\n",
     "    sales_df\n",
@@ -233,29 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "fbb5e9bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] enriched_df row count: 15\n",
-      "+---------+-------+----------+----------+------+----------+--------+--------+---------------+-------------------+---------------+\n",
-      "|ProductID|OrderID|SaleAmount| OrderDate|Region|CustomerID|Discount|Currency|OrderDateParsed|        ProductName|       Category|\n",
-      "+---------+-------+----------+----------+------+----------+--------+--------+---------------+-------------------+---------------+\n",
-      "|      P50|   1001|    299.99|01/05/2023|  East|      C100|     0.1|     USD|     2023-01-05|     Wireless Mouse|    Electronics|\n",
-      "|      PX1|   1005|      89.5|01/07/2023| North|      NULL|     0.0|     USD|     2023-01-07|               NULL|           NULL|\n",
-      "|      P12|   1007|     120.0|01/05/2023|  East|      C105|     0.1|     GBP|     2023-01-05|Notebook Stationery|Office Supplies|\n",
-      "|      P88|   1008|     300.0|02/05/2023| North|      C106|     0.0|     USD|     2023-02-05|      Monitor Stand|Office Supplies|\n",
-      "|      P77|   1009|       0.0|03/05/2023| South|      C107|    NULL|     USD|     2023-03-05|   Portable Speaker|    Electronics|\n",
-      "+---------+-------+----------+----------+------+----------+--------+--------+---------------+-------------------+---------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "enriched_df = sales_df_clean.join(product_df, on=\"ProductID\", how=\"left\")\n",
     "print(f\"[INFO] enriched_df row count: {enriched_df.count()}\")\n",
@@ -272,29 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8a3840c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] converted_df row count: 15\n",
-      "+---------+-------+----------+----------+------+----------+--------+--------+---------------+-------------------+---------------+-----------------+\n",
-      "|ProductID|OrderID|SaleAmount| OrderDate|Region|CustomerID|Discount|Currency|OrderDateParsed|        ProductName|       Category|    SaleAmountUSD|\n",
-      "+---------+-------+----------+----------+------+----------+--------+--------+---------------+-------------------+---------------+-----------------+\n",
-      "|      P50|   1001|    299.99|01/05/2023|  East|      C100|     0.1|     USD|     2023-01-05|     Wireless Mouse|    Electronics|           299.99|\n",
-      "|      PX1|   1005|      89.5|01/07/2023| North|      NULL|     0.0|     USD|     2023-01-07|               NULL|           NULL|             89.5|\n",
-      "|      P12|   1007|     120.0|01/05/2023|  East|      C105|     0.1|     GBP|     2023-01-05|Notebook Stationery|Office Supplies|159.5744680851064|\n",
-      "|      P88|   1008|     300.0|02/05/2023| North|      C106|     0.0|     USD|     2023-02-05|      Monitor Stand|Office Supplies|            300.0|\n",
-      "|      P77|   1009|       0.0|03/05/2023| South|      C107|    NULL|     USD|     2023-03-05|   Portable Speaker|    Electronics|              0.0|\n",
-      "+---------+-------+----------+----------+------+----------+--------+--------+---------------+-------------------+---------------+-----------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_exchange_rates():\n",
     "    try:\n",
@@ -333,18 +218,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "785352f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleted old log directory at /app/logs/conversion_log\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "conversion_log_df = converted_df.withColumn(\"ConversionTime\", current_timestamp()) \\\n",
     "    .select(\"OrderID\", \"Currency\", \"SaleAmount\", \"SaleAmountUSD\", \"ConversionTime\")\n",
@@ -376,22 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c761c3ce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------+-------+----------+---------+------+----------+--------+--------+---------------+-----------+--------+-------------+-----------+----------+\n",
-      "|ProductID|OrderID|SaleAmount|OrderDate|Region|CustomerID|Discount|Currency|OrderDateParsed|ProductName|Category|SaleAmountUSD|ErrorReason|RejectedAt|\n",
-      "+---------+-------+----------+---------+------+----------+--------+--------+---------------+-----------+--------+-------------+-----------+----------+\n",
-      "+---------+-------+----------+---------+------+----------+--------+--------+---------------+-----------+--------+-------------+-----------+----------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "error_df = converted_df.filter(col(\"SaleAmountUSD\").isNull())\n",
     "error_df = error_df.withColumn(\"ErrorReason\", lit(\"Invalid currency or amount\")) \\\n",
@@ -415,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "19f10782",
    "metadata": {},
    "outputs": [],
@@ -433,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "806cf1d9",
    "metadata": {},
    "outputs": [],
@@ -442,7 +307,7 @@
     "\n",
     "db_props = {\n",
     "    \"user\": \"sa\",\n",
-    "    \"password\": \"qwe123!@#\",\n",
+    "    \"password\": \"qwe123!@#$\",\n",
     "    \"driver\": \"com.microsoft.sqlserver.jdbc.SQLServerDriver\"\n",
     "}\n",
     "\n",
@@ -462,37 +327,7 @@
    "execution_count": null,
    "id": "f248e34f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------\n",
-      "Exception occurred during processing of request from ('127.0.0.1', 43616)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.11/socketserver.py\", line 317, in _handle_request_noblock\n",
-      "    self.process_request(request, client_address)\n",
-      "  File \"/opt/conda/lib/python3.11/socketserver.py\", line 348, in process_request\n",
-      "    self.finish_request(request, client_address)\n",
-      "  File \"/opt/conda/lib/python3.11/socketserver.py\", line 361, in finish_request\n",
-      "    self.RequestHandlerClass(request, client_address, self)\n",
-      "  File \"/opt/conda/lib/python3.11/socketserver.py\", line 755, in __init__\n",
-      "    self.handle()\n",
-      "  File \"/opt/conda/lib/python3.11/site-packages/pyspark/accumulators.py\", line 295, in handle\n",
-      "    poll(accum_updates)\n",
-      "  File \"/opt/conda/lib/python3.11/site-packages/pyspark/accumulators.py\", line 267, in poll\n",
-      "    if self.rfile in r and func():\n",
-      "                           ^^^^^^\n",
-      "  File \"/opt/conda/lib/python3.11/site-packages/pyspark/accumulators.py\", line 271, in accum_updates\n",
-      "    num_updates = read_int(self.rfile)\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/conda/lib/python3.11/site-packages/pyspark/serializers.py\", line 596, in read_int\n",
-      "    raise EOFError\n",
-      "EOFError\n",
-      "----------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "error_df.write.jdbc(url=jdbc_url, table=\"RejectedRecords\", mode=\"append\", properties=db_props)"
    ]
